[gd_scene load_steps=15 format=3 uid="uid://c45vh6mfhs001"]

[ext_resource type="Shader" path="res://scripts/vignette.gdshader" id="1_k7kah"]
[ext_resource type="Script" path="res://scenes/tutorial_game.gd" id="1_pmiaw"]
[ext_resource type="PackedScene" uid="uid://c6fxvlcgeslpe" path="res://scenes/tutorial_river.tscn" id="2_c174j"]
[ext_resource type="PackedScene" uid="uid://x6bvyulac3tb" path="res://scenes/dam.tscn" id="3_ke5cx"]
[ext_resource type="PackedScene" uid="uid://0uiyl0r71iuo" path="res://scenes/joint.tscn" id="4_2vvq7"]
[ext_resource type="Texture2D" uid="uid://bivyw858qrcs5" path="res://sprites/highlight/screen_mask.png" id="6_62h1v"]
[ext_resource type="Texture2D" uid="uid://bpl18pmsea083" path="res://sprites/screens/DDE_game_state.png" id="7_el2v7"]
[ext_resource type="Texture2D" uid="uid://ierea862xlvk" path="res://sprites/screens/press_space_to_continue.png" id="7_xahwj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nl0py"]
shader = ExtResource("1_k7kah")
shader_parameter/color = null
shader_parameter/multiplier = 0.36
shader_parameter/softness = 0.84

[sub_resource type="AtlasTexture" id="AtlasTexture_osrrc"]
atlas = ExtResource("7_el2v7")
region = Rect2(0, 0, 106, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_40cku"]
atlas = ExtResource("7_el2v7")
region = Rect2(106, 0, 106, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6www"]
atlas = ExtResource("7_el2v7")
region = Rect2(212, 0, 106, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_68h28"]
atlas = ExtResource("7_el2v7")
region = Rect2(318, 0, 106, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_4son1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_osrrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40cku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6www")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68h28")
}],
"loop": false,
"name": &"Introduction",
"speed": 5.0
}]

[node name="tutorial_game" type="Node2D"]
script = ExtResource("1_pmiaw")

[node name="vignette" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="vignette"]
z_index = 1
material = SubResource("ShaderMaterial_nl0py")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="tutorial_river" parent="." instance=ExtResource("2_c174j")]

[node name="dam" parent="." instance=ExtResource("3_ke5cx")]
z_index = -19

[node name="joint" parent="dam" instance=ExtResource("4_2vvq7")]
z_index = -10
position = Vector2(96, -8)
freeze = true

[node name="joint2" parent="dam" instance=ExtResource("4_2vvq7")]
position = Vector2(-7, 36)
freeze = true

[node name="joint3" parent="dam" instance=ExtResource("4_2vvq7")]
position = Vector2(-7, -49)
freeze = true

[node name="darkness_mask" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 1
texture = ExtResource("6_62h1v")

[node name="game_state" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_4son1")
animation = &"Introduction"

[node name="space_to_continue" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 60)
texture = ExtResource("7_xahwj")
